--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,4 +26,18 @@
     text-align: right;
     margin-right: 20px;
  }
+
+ .pagination>li>a {          
+   border: none;     
+   color: #696969;   
+ }
+ 
+ .pagination>.active>a {     
+   background: #93c9ff;     
+   border-radius: 15px;     
+ }
+ 
+ .pagination>li>a:hover {        
+   border-radius: 15px;   
+ }
  
