--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -20,6 +20,8 @@
  @import '@fortawesome/fontawesome-free/scss/regular';
  @import '@fortawesome/fontawesome-free/scss/brands';
  @import '@fortawesome/fontawesome-free/scss/v4-shims';
+ @import "slick-theme";
+ @import "slick"; 
 
  .list-style-none li{
     list-style: none;
@@ -27,6 +29,7 @@
     margin-right: 20px;
  }
 
+ //ページネーションCSS
  .pagination>li>a {          
    border: none;     
    color: #696969;   
@@ -41,3 +44,11 @@
    border-radius: 15px;   
  }
  
+ //public::homes:top
+.top-message{
+  margin-left: 10px;
+}
+
+.images{
+  width: 100%;
+}
