devise to japanese

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -29,7 +29,12 @@
     margin-right: 20px;
  }
 
- //ページネーションCSS
+ //deviseのcss
+ .devise-container {
+  text-align: center;
+ }
+
+//ページネーションCSS
  .pagination>li>a {          
    border: none;     
    color: #696969;   
@@ -44,11 +49,18 @@
    border-radius: 15px;   
  }
  
- //public::homes:top
+
+//public::homes:topのcss
 .top-message{
   margin-left: 10px;
 }
 
+.top-container{
+  text-align:center;
+  margin: 0 auto;
+  width:100%;
+  height:500px;
+}
 .images{
   width: 100%;
 }
