--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-
+<div class="top-container">
   <div class="slider">
     <%= image_tag 'public-top.jpg' ,class:"images" %>
     <%= image_tag 'public-top2.jpg' ,class:"images" %>
@@ -34,4 +34,5 @@
     <%= image_tag 'public-top4.jpg' ,class:"images" %>
     <%= image_tag 'public-top5.jpg' ,class:"images" %>
   </div>
+</div>
 
