--- a/app/views/public/passwords/edit.html.erb
+++ b/app/views/public/passwords/edit.html.erb
@@ -1,7 +1,7 @@
-<h2>Change your password</h2>
+<h2>パスワードを変更する</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
+  <%= render "public/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
@@ -18,7 +18,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "パスワードを変更する" %>
   </div>
 <% end %>
 
