--- a/app/views/public/passwords/new.html.erb
+++ b/app/views/public/passwords/new.html.erb
@@ -1,7 +1,7 @@
-<h2>Forgot your password?</h2>
+<h2>パスワードをお忘れですか?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "publics/shared/error_messages", resource: resource %>
+  <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -9,8 +9,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "パスワードリセットの手続きを始める" %>
   </div>
 <% end %>
 
-<%= render "publics/shared/links" %>
+<%= render "public/shared/links" %>
