--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -5,3 +5,7 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "新規登録画面へ", new_registration_path(resource_name) %><br />
 <% end %>
+
+<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+  <%= link_to "パスワードを忘れた場合はこちら", new_password_path(resource_name) %>
+<% end %>
