--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the public/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.header-menu{
+  padding: 20px;
+}
+
+.top-message{
+  margin-left: 10px;
+}
+
+.top-container{
+  text-align:center;
+  margin: 0 auto;
+  width:90%;
+  height:500px;
+}
+.images{
+  width: 100%;
+}
