fix/file-composition-js-and-scss

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -20,13 +20,17 @@
  @import '@fortawesome/fontawesome-free/scss/regular';
  @import '@fortawesome/fontawesome-free/scss/brands';
  @import '@fortawesome/fontawesome-free/scss/v4-shims';
- @import "slick-theme";
- @import "slick"; 
 
  .list-style-none li{
     list-style: none;
     text-align: right;
     margin-right: 20px;
+ }
+
+ .notice-and-alert{
+  text-align: right;
+  margin-right: 10px;
+  margin-bottom: -10px;
  }
 
  //deviseのcss
