--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -11,9 +11,9 @@
             %i.fa-solid.fa-right-from-bracket
             = link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-secondary"
         - else
-          %li
+          %li.header-element
             %i.fa-solid.fa-user-plus
             = link_to "新規登録", new_customer_registration_path, class: "btn btn-success"
-          %li
+          %li.header-element
             %i.fa-solid.fa-right-to-bracket
             = link_to "ログイン", new_customer_session_path, class: "btn btn-primary"
