--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,15 +4,18 @@
     %meta{:content => "text/haml; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title BeMyStyle
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
+    = favicon_link_tag'favicon.ico'
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     %link{:href => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css", :rel => "stylesheet", :type => "text/css"}/
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    %script{:src => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", :type => "text/javascript"}
     %script{:crossorigin => "anonymous", :src => "https://kit.fontawesome.com/f47d9591f1.js"}
   %body
-    %p.notice= notice
-    %p.alert= alert
+    .notice-and-alert
+      %p.notice= notice
+      %p.alert= alert
     = yield
+    %script{:src => "//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", :type => "text/javascript"}
+
