fix/scss-nest-and-header-modify

--- a/app/assets/stylesheets/header_menu.scss
+++ b/app/assets/stylesheets/header_menu.scss
@@ -1,11 +1,13 @@
 .header-menu{
-  padding: 0px 10px;
-}
-
-.top-message{
-  margin-left: 10px;
-}
-
-.header-element{
-  margin:5px;
+  height: 100px;
+  padding: 10px;
+  .top-message{
+    margin-left: 10px;
+  }
+  .header-sign-in-list{
+    margin-top: 10px;
+    .header-sign-in-element{
+      margin-top:5px;
+    }
+  }
 }
