--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -5,15 +5,15 @@
         %h1 be My Style
         %p ようこそ！あなたの「やりたい！」を叶える場所へ！
     .col-4
-      %ul.list-style-none
+      %ul.list-style-none.header-sign-in-list
         - if customer_signed_in?
-          %li
+          %li.header-sign-in-element
             %i.fa-solid.fa-right-from-bracket
             = link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-secondary"
         - else
-          %li.header-element
+          %li.header-sign-in-element
             %i.fa-solid.fa-user-plus
             = link_to "新規登録", new_customer_registration_path, class: "btn btn-success"
-          %li.header-element
+          %li.header-sign-in-element
             %i.fa-solid.fa-right-to-bracket
             = link_to "ログイン", new_customer_session_path, class: "btn btn-primary"
