--- a/app/assets/stylesheets/header_menu.scss
+++ b/app/assets/stylesheets/header_menu.scss
@@ -1,13 +1,22 @@
 .header-menu{
-  height: 100px;
+  height: 50px;
   padding: 10px;
   .top-message{
-    margin-left: 10px;
+    margin-left: 100px;
+    h1{
+      font-size: 20px;
+    }
+    p{
+      font-size: 10px;
+    }
   }
   .header-sign-in-list{
     margin-top: 10px;
     .header-sign-in-element{
       margin-top:5px;
+    }
+    .customer-signed-in-list{
+      display: flex;
     }
   }
 }
