--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the public/customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.customer-index-title{
+  margin-left: 100px;
+}
+
+.customer-index-container{
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
+  .img-container{
+    width: 322px;
+    height: 300px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+  }
+  .text-container{
+    width: 322px;
+    position: relative;
+    .customer-index-link{
+      position: absolute;
+      left: 70px;
+      bottom: 5px;
+    }
+  }
+}
