--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -21,34 +21,23 @@
  @import '@fortawesome/fontawesome-free/scss/brands';
  @import '@fortawesome/fontawesome-free/scss/v4-shims';
 
- .list-style-none li{
-    list-style: none;
-    text-align: right;
-    margin-right: 10px;
- }
+.list-style-none li{
+  list-style: none;
+  text-align: right;
+  margin-right: 10px;
+}
 
- .notice-and-alert{
+.notice-and-alert{
   height: 15px;
   text-align: right;
   margin-right: 10px;
- }
+}
 
- //deviseのcss
- .devise-container {
+.devise-container {
   text-align: center;
- }
+}
 
-//ページネーションCSS
- .pagination>li>a {          
-   border: none;     
-   color: #696969;   
- }
- 
- .pagination>.active>a {     
-   background: #93c9ff;     
-   border-radius: 15px;     
- }
- 
- .pagination>li>a:hover {        
-   border-radius: 15px;   
- }
+.paginate-layout{
+  margin: 0 auto;
+  text-align: center;
+}
