--- a/app/views/public/customers/edit.html.haml
+++ b/app/views/public/customers/edit.html.haml
@@ -1,2 +1,30 @@
-%h1 Public::Customers#edit
-%p Find me in app/views/public/customers/edit.html.erb
+.container-fluid.px-5.px-sm-0
+  .row
+    .col-3
+      "テスト"
+    .col-3
+      "テスト"
+    .col-3
+      "テスト"
+
+%table.table
+  .thead
+    .tr
+      .th{scope:"col"}
+        %span #
+      .th{scope:"col"}
+        First
+      .th{scope:"col"}
+        Last
+      .th{scope:"col"}
+        Handle
+  .tbody
+    .tr
+      .th{scope:"row"}
+        1
+      .td
+        Mark
+      .td
+        Otto
+      .td@mdo
+    </tr>
