--- a/app/views/public/customers/index.html.haml
+++ b/app/views/public/customers/index.html.haml
@@ -13,12 +13,12 @@
           = image_tag 'no_image'
       .card-body.text-container
         %h5.card-title
-          = customer.name
+          = customer.human_attribute_enum(:name)
         %h6.card-subtitle
           part:
-          = customer.part
+          = customer.human_attribute_enum(:part)
         %p.card-text
-          = customer.introduction
+          = customer.human_attribute_enum(:introduction)
         = link_to 'プロフィール画面へ', public_customer_path(customer.id), class: "customer-index-link"
   .paginate-layout
     = paginate @customers
