--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -23,4 +23,4 @@
     %li
       = link_to "Topページ", public_homes_top_path, class: "btn btn-info"
     %li
-      = link_to "User一覧", public_customers_path, class: "btn btn-info"
+      = link_to "Artist一覧", public_customers_path, class: "btn btn-info"
