--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -28,10 +28,20 @@
   margin-right: 10px;
 }
 
-.notice-and-alert{
-  height: 15px;
-  text-align: right;
-  margin-right: 10px;
+.notifications {
+  color: $white;
+  text-align: center;
+  width: 90%;
+  border-radius: 10px;
+  margin: 0 auto;
+  .notice {
+    background-color: lightBlue;
+    border-radius: 10px;
+  }
+  .alert {
+    background-color: alert_red;
+    border-radius: 10px;
+  }
 }
 
 .devise-container {
