--- a/app/views/public/customers/edit.html.haml
+++ b/app/views/public/customers/edit.html.haml
@@ -24,11 +24,7 @@
           %td
             = f.date_field :birthday
         %tr
-          %th{scope:"row"} メインパート
-          %td
-            = f.select :part, Customer.enum_options_for_select(:part)
-        %tr
-          %th{scope:"row"} サブパート
+          %th{scope:"row"} パート
           %td
             = f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |tag|
               = tag.label do
