--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -44,11 +44,63 @@
   }
 }
 
-.devise-container {
-  text-align: center;
-}
-
 .paginate-layout{
   margin: 0 auto;
   text-align: center;
+}
+
+.devise-container{
+  width: 90%;
+  margin: 0 auto;
+  h2 {
+    display: block;
+    width: 100%;
+    margin-left: 100px;
+  }
+}
+
+.registration-table{
+  border: thick double lightblue;
+}
+
+.registration-btn{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: block;
+  width: 200px;
+  margin-left: auto;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 10px;
+}
+
+.registration-img{
+  width: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.session-table{
+  border: thick double lightblue;
+}
+
+.session-btn{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: block;
+  width: 200px;
+  margin-left: auto;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 10px;
+}
+
+input[type="text"] {
+  width: 90%;
+  height: 40px;
 }
