--- a/app/assets/stylesheets/header_menu.scss
+++ b/app/assets/stylesheets/header_menu.scss
@@ -2,7 +2,9 @@
   height: 50px;
   padding: 10px;
   .top-message{
-    margin-left: 100px;
+    position: fixed;
+    top: 10px;
+    left: 70px;
     h1{
       font-size: 20px;
     }
@@ -11,6 +13,9 @@
     }
   }
   .header-sign-in-list{
+    position: fixed;
+    top: 10px;
+    right: 50px;
     margin: 10px;
     display: flex;
     height: 15px;
