--- a/app/views/layouts/_header_menu.html.haml
+++ b/app/views/layouts/_header_menu.html.haml
@@ -13,7 +13,7 @@
         - else
           %li
             %i.fa-solid.fa-user-plus
-            = link_to "新規登録", new_customer_registration_path, class: "btn btn-success"
+            = link_to "新規登録", new_customer_registration_path, data: { 'turbolinks': false }, class: "btn btn-success"
           %li
             %i.fa-solid.fa-right-to-bracket
             = link_to "ログイン", new_customer_session_path, class: "btn btn-primary"
