--- a/app/views/public/customers/edit.html.haml
+++ b/app/views/public/customers/edit.html.haml
@@ -2,59 +2,72 @@
   %h2 アーティスト編集画面
 
 = form_with model: [:public, @customer], local: true do |f|
-  %table.table.table-striped.customer-edit-table{:width=>"100%",:border=>"1"}
-    %colgroup
-      %col{width: "19%"}
-      %col{width: "81%"}
-        %tr
-          %th{scope:"row"} 画像
-          %td
-            = f.file_field :profile_image, accept: 'image/*'
-            #edit-image
-        %tr
-          %th{scope:"row"} 名前
-          %td
-            = f.text_field :name
-        %tr
-          %th{scope:"row"} 性別
-          %td
-            = f.select :sex, Customer.enum_options_for_select(:sex)
-        %tr
-          %th{scope:"row"} 誕生日
-          %td
-            = f.date_field :birthday
-        %tr
-          %th{scope:"row"} パート
-          %td
-            = f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |tag|
-              = tag.label do
-                = tag.check_box
-                = tag.text
-        %tr
-          %th{scope:"row"} 活動場所
-          %td 
-            = f.collection_select :prefecture_id, Prefecture.all, :id, :name
-        %tr
-          %th{scope:"row"} 活動ペース
-          %td 週１くらい
-        %tr
-          %th{scope:"row"} 好きなアーティスト
-          %td GLAY、Beatles
-        %tr
-          %th{scope:"row"} 好きなジャンル
-          %td
-            = f.collection_check_boxes(:genre_ids, Genre.all, :id, :name) do |genre|
-              = genre.label do
-                = genre.check_box
-                = genre.text
-        %tr
-          %th{scope:"row"} 作品URL
-          %td http//~...
-        %tr
-          %th{scope:"row"} 自己紹介
-          %td
-            = f.text_area :introduction, size: "100x10"
-        = f.submit "プロフィールを更新", class: "btn btn-info customer-edit-btn", data: { confirm: 'こちらの内容で更新します。よろしいですか？' }
-
-%script
-  enable_select2();
+  .customer-edit-container.px-0.px-sm-0
+    %table.table.table-striped.customer-edit-table{:width=>"100%",:border=>"1"}
+      %colgroup
+        %col{width: "19%"}
+        %col{width: "81%"}
+          %tr
+            %th{scope:"row"} 画像
+            %td
+              = f.file_field :profile_image, accept: 'image/*'
+              #edit-image
+          %tr
+            %th{scope:"row"} ニックネーム
+            %td
+              = f.text_field :name
+          %tr
+            %th{scope:"row"} 性別
+            %td
+              = f.select :sex, Customer.enum_options_for_select(:sex)
+          %tr
+            %th{scope:"row"} 誕生日
+            %td
+              = f.date_field :birthday
+          %tr
+            %th{scope:"row"} パート
+            %td
+              = f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |tag|
+                = tag.label do
+                  = tag.check_box
+                  = tag.text
+          %tr
+            %th{scope:"row"} 活動場所
+            %td 
+              = f.collection_select :prefecture_id, Prefecture.all, :id, :name
+          %tr
+            %th{scope:"row"} 活動ペース
+            %td
+              = f.select :activity_stance, Customer.enum_options_for_select(:activity_stance)
+          %tr
+            %th{scope:"row"} 好きなジャンル
+            %td
+              = f.collection_check_boxes(:genre_ids, Genre.all, :id, :name) do |genre|
+                = genre.label do
+                  = genre.check_box
+                  = genre.text
+          %tr
+            %th{:rowspan => 5} 好きなアーティスト
+            %td
+              = f.text_field :favorite_artist1
+          %tr
+            %td
+              = f.text_field :favorite_artist2
+          %tr
+            %td
+              = f.text_field :favorite_artist3
+          %tr
+            %td
+              = f.text_field :favorite_artist4
+          %tr
+            %td
+              = f.text_field :favorite_artist5
+          %tr
+            %th{scope:"row"} 作品URL
+            %td
+              = f.text_field :url
+          %tr
+            %th{scope:"row"} 自己紹介
+            %td
+              = f.text_area :introduction, style: "width:90%"
+          = f.submit "プロフィールを更新", class: "btn btn-info customer-edit-btn", data: { confirm: 'こちらの内容で更新します。よろしいですか？' }
