--- a/app/views/public/shared/_links.html.haml
+++ b/app/views/public/shared/_links.html.haml
@@ -2,7 +2,7 @@
   = link_to "ログイン画面へ", new_session_path(resource_name)
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "新規登録画面へ", new_registration_path(resource_name)
+  = link_to "新規登録画面へ", new_registration_path(resource_name), data: { 'turbolinks': false }
   %br/
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
   = link_to "パスワードを忘れた場合はこちら", new_password_path(resource_name)
