--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -76,6 +76,16 @@
   }
 }
 
+.devise-password-container{
+  width: 50%;
+  margin: 0 auto;
+  h2 {
+    display: block;
+    width: 100%;
+    margin-left: 100px;
+  }
+}
+
 .devise-container{
   width: 90%;
   margin: 0 auto;
@@ -128,6 +138,23 @@
 }
 
 .session-btn{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  display: block;
+  width: 200px;
+  margin-left: auto;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  border-radius: 10px;
+}
+
+.password-table{
+  border: thick double lightblue;
+}
+
+.password-btn{
   position: fixed;
   bottom: 30px;
   right: 30px;
