--- a/app/views/public/passwords/new.html.haml
+++ b/app/views/public/passwords/new.html.haml
@@ -1,10 +1,15 @@
-%h2 パスワードをお忘れですか?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render "public/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .actions
-    = f.submit "パスワードリセットの手続きを始める"
-= render "public/shared/links"
+.devise-password-container.px-0.px-sm-0
+  %h2 パスワードをお忘れですか?
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+    = render "public/shared/error_messages", resource: resource
+    %table.table.table-striped.password-table{:width=>"100%",:border=>"1"}
+      %colgroup
+        %col{width: "19%"}
+        %col{width: "81%"}
+          %tr
+            %th{scope:"row"} メールアドレス
+            %td
+              = f.email_field :email, autofocus: true, autocomplete: "email"
+          .actions
+            = f.submit "パスワードリセット", class: "btn btn-info password-btn"
+  = render "public/shared/links"
