feature/follow-unfollow

--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -65,7 +65,7 @@
     .card-text{
       margin-top: 10px;
     }
-    .customer-edit-link{
+    .customer-show-btn{
       text-align: center;
       display: block;
       width: 200px;
