--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -66,6 +66,7 @@
       margin-top: 10px;
     }
     .customer-show-btn{
+      margin: 0 auto;
       text-align: center;
       display: block;
       width: 200px;
