--- a/app/views/public/customers/index.html.haml
+++ b/app/views/public/customers/index.html.haml
@@ -11,11 +11,12 @@
 .customer-index-container
   - @customers.each do |customer|
     .card
-      .img-container
-        - if customer.profile_image.present?
-          = image_tag customer.profile_image
-        - else
-          = image_tag 'no_image'
+      = link_to public_customer_path(customer) do
+        .img-container
+          - if customer.profile_image.present?
+            = image_tag customer.profile_image
+          - else
+            = image_tag 'no_image'
       .card-body.text-container
         %h5.card-title
           = customer.human_attribute_enum(:name)
